# tingshu

./: .gitignore  LICENSE  README.md  setup.sh
docs/: technical-plan.md  tts-model-evaluation.md
server/: README.md  config.yaml.example  pyproject.toml
server/app/: config.py  keepalive.py  main.py
server/app/api/: auth.py  books.py  chapter_meta_stream.py  chapters.py  characters.py  deps.py  health.py  tts.py
server/app/core/: cache_janitor.py  enums.py  models.py  narrator.py  service.py  storage.py  tts_cache.py  voice.py
server/app/core/nlp/: chapters.py  reconcile.py  sentences.py
server/app/core/parsers/: epub.py  txt.py
server/app/services/: audio_qc.py  llm.py  llm_deepseek.py  llm_factory.py  llm_prompts.py  llm_stub.py  mlx_gpu.py  tts.py  tts_factory.py  tts_qwen3.py  tts_stub.py
server/data/voices/: speakers.json
server/data/voices/prompts/: README.md
server/scripts/: _analyze_tails.py  audio_annotator.py  detect_tts_defects.py  generate_voicedesign_voices.py  probe_qwen3.py  probe_qwen3_threaded.py  probe_qwen3_twice.py  probe_qwen3_warm_worker.py  probe_qwen3_worker.py  synth_one_sentence.py  synth_raw_wav.py  synth_split_compare.py  test_segment_0441.py  validate_prompt_changes.py  viz_audio.py
server/tests/: conftest.py  test_api_books.py  test_api_characters.py  test_audio_qc.py  test_auth.py  test_book_analysis.py  test_chapter_detection.py  test_chapter_meta.py  test_epub_parser.py  test_incidental_characters.py  test_llm_prompts.py  test_reconcile.py  test_sentences.py  test_tts.py  test_txt_parser.py  test_voice_match.py
(+22 files in other folders)
